<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:padding="10dp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/senderTv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="24sp"
        android:text="@string/sender" />

    <TextView
        android:id="@+id/messageTv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="24sp"
        android:text="@string/message" />

    <TextView
        android:id="@+id/datetimeTv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/date_hour" />
</LinearLayout>